Fixed Landing Page Whitespace

--- a/client/src/components/Landing/style.css
+++ b/client/src/components/Landing/style.css
@@ -23,6 +23,7 @@
 
 .gridItem {
   min-height: 100%;
+  display: inline-grid;
 }
 
 .gridPics {
